Fixed alignment issues and added user id in header
Fixed alignment issues and added user id in header

--- a/react-frontend/src/LoginSignUp.css
+++ b/react-frontend/src/LoginSignUp.css
@@ -7,6 +7,16 @@
     padding-bottom: 30px;
     width: 600px;
 }
+.container2{
+    display: flex;
+    flex-direction: column;
+    align-items: self-center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 80px;
+    background: #fff;
+    width: 900px;
+}
 .header{
     display: flex;
     flex-direction: column;
